# gtkmmRuntimeBuildFlatpak

./: CMakeLists.txt  README.md  build.sh  main.cpp  org.ratevandr.gtkmmInFlatpak-IDE.json  org.ratevandr.gtkmmInFlatpak.json
